tdf#115321, tdf#139065 render emphasismark for pdf export.

Fix the logical mistake: it rendered emphasis mark only
for spaces - that is excatly opposite to what we want.

Change-Id: Id478af269c6cf8ab9a9e1413d19f9b3a3451d59d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/147916
Tested-by: Jenkins
Reviewed-by: Mark Hung <marklh9@gmail.com>